Updated Grenade Behavior
* Started work on blast radius line-of-sight check
* Added grenade spawn/throw logic to work with the player's facing direction
* Added VFX to grenade explosion
* Grenade now destroys itself when it detonates

--- a/ShooterGame.uproject
+++ b/ShooterGame.uproject
@@ -75,6 +75,15 @@
 		{
 			"Name": "Synthesis",
 			"Enabled": true
+		},
+		{
+			"Name": "SteamVR",
+			"Enabled": false,
+			"SupportedTargetPlatforms": [
+				"Win32",
+				"Win64",
+				"Linux"
+			]
 		}
 	],
 	"TargetPlatforms": [
