--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -232,7 +232,7 @@ AllowDerivedBlueprints=true
 +EditProfiles=(Name="OverlapAllDynamic",CustomResponses=((Channel="Weapon",Response=ECR_Ignore)))
 +EditProfiles=(Name="InvisibleWall",CustomResponses=((Channel="Weapon",Response=ECR_Ignore)))
 +EditProfiles=(Name="Trigger",CustomResponses=((Channel="Weapon",Response=ECR_Ignore),(Channel="Projectile",Response=ECR_Ignore)))
-+EditProfiles=(Name="Pawn",CustomResponses=((Channel="Projectile",Response=ECR_Overlap),(Channel="Pickup",Response=ECR_Overlap),(Channel="Blast")))
++EditProfiles=(Name="Pawn",CustomResponses=((Channel="Projectile",Response=ECR_Overlap),(Channel="Pickup",Response=ECR_Overlap),(Channel="Blast",Response=ECR_Overlap)))
 +EditProfiles=(Name="BlockAll",CustomResponses=((Channel="Blast")))
 +EditProfiles=(Name="BlockAllDynamic",CustomResponses=((Channel="Blast")))
 -ProfileRedirects=(OldName="BlockingVolume",NewName="InvisibleWall")
